<resources>
    <string name="app_name">Quiz App</string>
    <string name="appName">QuizApp</string>
    <string name="guessFlag">Flag</string>
    <string name="mainQuestion">What country does this flag belongs to?</string>
    <string name="btnSubmit">SUBMIT</string>
    <string name="username">Please enter your name</string>
    <string name="greetings">Welcome</string>
    <string name="btnStart">Start</string>
    <string name="labelHint">Name</string>
    <string name="tv_result">Result</string>
    <string name="iv_image">image</string>
    <string name="tv_congratulations">Hey, Congratulations!</string>
    <string name="tv_name">Username</string>
    <string name="tv_score">Your Score is 9 out of 10</string>
    <string name="btn_finish">FINISH</string>
</resources>