<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--
        Useful for small screens:
        android:fillViewport="true"
     -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".QuizQuestionsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Main Question -->
            <TextView
                android:id="@+id/tv_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/mainQuestion"
                android:textColor="@color/textColor"
                android:textSize="22sp" />

            <!-- Flag Image -->
            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/guessFlag"
                android:src="@drawable/ic_flag_of_argentina" />

            <!-- It will contain list of options -->
            <LinearLayout
                android:id="@+id/ll_progress_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <!-- Progress Bar
                     With layout_weight we have to use layout_width = 0
                -->
                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:indeterminate="false"
                    android:max="10"
                    android:minHeight="50dp"
                    android:progress="0" />

                <!-- Progress Counter: 0/10 -->
                <TextView
                    android:id="@+id/tv_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="15dp"
                    android:textColorHint="@color/hintColor"
                    android:textSize="14sp"
                    tools:text="0/10" />

            </LinearLayout>

            <!-- Option 1 -->
            <TextView
                android:id="@+id/tv_option_one"
                style="@style/tv_options"
                tools:text="Apple" />

            <!-- Option 2 -->
            <TextView
                android:id="@+id/tv_option_two"
                style="@style/tv_options"
                tools:text="Google" />

            <!-- Option 3 -->
            <TextView
                android:id="@+id/tv_option_three"
                style="@style/tv_options"
                tools:text="Android Inc." />

            <!-- Option 4 -->
            <TextView
                android:id="@+id/tv_option_four"
                style="@style/tv_options"
                tools:text="Nokia" />

            <!-- Submit Button -->
            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/btnSubmit"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>


</layout>